Tue Apr 17 23:16:54 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libexslt/date.c: fixed type inconsistencies, double->int
	 and unsigned/signed mismatch warnings eliminated

Tue Apr 16 19:40:21 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/Makefile.msvc: XSLT debugger support fix
	* win32/configure.js: XSLT debugger support fix
	* libxslt/xsltconfig.h.in: XSLT debugger support fix

Mon Apr 15 19:27:31 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.16
	* doc/*: updated and rebuilt the docs

Mon Apr 15 17:27:51 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c: removed a warning
	* libxslt/transform.c libxslt/transform.h win32/libxslt.def.src:
	  added xsltRunStylesheetUser() API needed to fix #78546
	* xsltproc/xsltproc.c: second part of the fix #78546

Mon Apr 15 15:57:28 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: fixing the equivalent of #75779

Mon Apr 15 14:00:12 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c: fixed bug #78735
	* configure.in tests/Makefile.am tests/keys/*:
	  added the tests in a separate directory

Mon Apr 15 00:01:07 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-83.xml
	  tests/general/Makefile.am tests/general/bug-83.*: added a 
	  specific example for bug #78662 in the regression tests
	* tests/docbook/: this also changed a couple of DocBook results
	
Sun Apr 14 15:32:23 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: trying to kill #77827 IEEE conformance on alphas
	* libxslt/imports.c libxslt/transform.c libxslt/xslt.c: fixing
	  bug #78211
	* tests/docs/Makefile.am tests/docs/bug-82.xml
	  tests/general/Makefile.am tests/general/bug-82.*: added a 
	  specific example for bug #78211 in the regression tests

Wed Apr 10 20:35:54 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: applied patch from Mark Vakoc
