@@ -1,3 +1,7 @@
+Thu Apr 18 22:56:06 CEST 2002 Daniel Veillard <daniel@veillard.com>
+
+	* libexslt/exslt.h: extern "C" {  missing by Mark Vakoc
+
 Tue Apr 17 23:16:54 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>
 
 	* libexslt/date.c: fixed type inconsistencies, double->int
